# ai_speech_specialist

./: .gitignore  DISTRIBUTION.md  README.md  RELEASE_GUIDE.md  SpeechCoach.spec  build_distribution.sh  build_windows.sh  create_release.sh  easy_install.sh  goal.txt  main.py  netlify.toml  pyproject.toml  requirements-compatible.txt  requirements.txt  run.sh  setup.py  simple_main.py  speech_coach.manifest  speech_coach.spec  speech_coach_installer.nsi  speech_coach_windows.spec  version_info.txt
.github/workflows/: build-releases.yml
assets/: ICON_README.md
releases/SpeechCoach_Linux/: README.txt  run_speech_coach.sh
src/analysis/: __init__.py  speech_analyzer.py
src/audio/: __init__.py  audio_manager.py
src/cloud/: __init__.py
src/lessons/: __init__.py
src/ui/: __init__.py  dashboard_widget.py  lessons_widget.py  main_window.py  real_time_widget.py  settings_widget.py
website/: _redirects  index.html
